[package]
name = "stgv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
structopt = "0.3"
anyhow = "1.0.57"
compression = "0.1.5"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
itertools-num = "0.1.3"
thiserror = "1.0.31"
pretty-bytes = "0.2.2"
tabled = "0.7.0"
atty = "0.2"